--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@sswahn/simple",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
-  "description": "",
+  "description": "This library simplifies common CRUD operations using Amazon S3 (Simple Storage Service), providing a convenient and intuitive interface.",
   "main": "src/index.js",
   "type": "module",
   "keywords": [
